Fix gap between tab on smaller screen sizes by adding bottom padding to make it more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,8 +107,11 @@ h2 {
 
 }
 
- 
-  
+img{
+  vertical-align: middle;
+  border-style: none;
+  padding-bottom: 5px;
+}
 
 
 /*-------------Footer*/
